VisualForcePage/src/objects/Employee__c.object
<CustomObject>
    <description>To hold the details of employee from different department</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>To hold the address of the employee</description>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>2015 - YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jhamshedpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranchi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hazaribagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucknow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kanpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrabad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEPARTMENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPARTMENT</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>EMPLOYEE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Mandotary</description>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>EMPLOYEE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>B.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.sc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Employee_First_Name__c  &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experienced__c</fullName>
        <label>Experienced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fresher__c</fullName>
        <label>Fresher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_on_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is on Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>Resignation_Date__c  + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_work_Experience__c</fullName>
        <label>Last work Experience</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_work_experience__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Multiple work experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Companies__c</fullName>
        <label>No of Companies</label>
        <picklist>
            <controllingField>Multiple_work_experience__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Roles</label>
        <referenceTo>Roles__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>EMPLOYEE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RollEmployee_Id__c</fullName>
        <label>RollEmployee Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SSN_Number__c</fullName>
        <label>SSN Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_till_Date__c</fullName>
        <label>Salary Credited till Date</label>
        <summarizedField>SALARY_DETAILS__c.Total_Earnings__c</summarizedField>
        <summaryForeignKey>SALARY_DETAILS__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skills1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
  Is_Active__c == TRUE  ,
    
  IF( 
   Is_on_Notice_Period__c == TRUE, 
    IMAGE( &quot;/img/samples/flag_yellow.gif&quot;,&quot;Employee is currently on notice period.&quot;)  , IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;Employee is active.&quot; ) 
    ),
    IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;Employee is currently inactive.&quot;)  
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Technical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Work_Experience__c</fullName>
        <label>Total Work Experience</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2nd_work_exp__c</fullName>
        <label>2nd work exp</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>Active_Employees</fullName>
        <columns>NAME</columns>
        <columns>Date_Of_Joining__c</columns>
        <columns>Employee_First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Employees</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Employee_On_notice_Period</fullName>
        <columns>NAME</columns>
        <columns>Date_Of_Joining__c</columns>
        <columns>Employee_First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_on_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Employee On notice Period</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Emp-{0000}</displayFormat>
        <label>Employee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <recordTypes>
        <fullName>Experienced</fullName>
        <active>false</active>
        <label>Experienced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non-Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_date_of_birth</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Age__c &lt;21, Age__c &gt;30 )</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Enter Valid Date Of BIrth</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NOTICE_PERIOD</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  Is_on_Notice_Period__c = TRUE , ISNULL(Resignation_Date__c), NOT( ISNULL(Resignation_Date__c)))</errorConditionFormula>
        <errorMessage>CHECK THE NOTICE PERIOD AND RESIGNATION DATE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN (TEXT(SSN_Number__c )) &gt;10</errorConditionFormula>
        <errorDisplayField>SSN_Number__c</errorDisplayField>
        <errorMessage>SSN number should not exceed 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WORKING_DAY</fullName>
        <active>true</active>
        <description>WORKING DAY</description>
        <errorConditionFormula>IF(  Resignation_Date__c  &lt; Date_Of_Joining__c ,TRUE , FALSE)</errorConditionFormula>
        <errorMessage>CHECK YOUR FIELDS</errorMessage>
    </validationRules>
</CustomObject>